(executable
 (public_name helloer)
 (name helloer)
 (package helloer)
 (libraries cmdliner helloer_lib)
 (modules helloer)
)

(library
 (public_name helloer_lib)
 (name helloer_lib)
 (modules helloer_lib)
)

(test
 (name test)
 (libraries alcotest helloer_lib)
 (modules test)
)

(cram
  (deps %{bin:helloer})
)
