(lang dune 3.18)

(name helloer)

(generate_opam_files true)

(authors "Welcomer <hell@er.com>")

(maintainers "Welcomer <hell@er.com>")

(source
 (uri "https://github.com/OCamlPro/opam_bp_examples"))

(homepage "https://github.com/OCamlPro/opam_bp_examples")

(bug_reports "https://github.com/OCamlPro/opam_bp_examples")

(documentation https://url/to/documentation)

(package
 (name helloer)
 (synopsis "HW")
 (description "A simple tool to display several types of 'hello world'")
 (depends ocaml alcotest)
 (tags
  ("toy project" "dune")))

(package
 (name helloer_lib)
 (synopsis "HWL")
 (description "The library that permit to choose between several tones of greetings")
 (depends ocaml)
 (tags
  ("toy project" "dune")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
